<resources>
    <string name="app_name">TextRecognition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snap">Snap</string>
    <string name="detect">Detect</string>
    <string name="get_picture">Get Picture</string>
    <string name="navigate">Navigate</string>
    <string name="upload_firebase">Upload Firebase</string>
</resources>